# modern-embedded-programming-course

./: .gitignore  .gitmodules  README.md
lesson-04/stm32c031/: .gitignore  CMakeLists.txt  STM32C031C6Tx_FLASH.ld  main.c
lesson-05/stm32c031/: CMakeLists.txt  main.c
lesson-06/stm32c031/: main.c
lesson-07/stm32c031/: main.c  stm32c031.h
lesson-08/stm32c031/: CMakeLists.txt  main.c  stm32c031.h
lesson-10/stm32c031/: CMakeLists.txt
lesson-11/stm32c031/: CMakeLists.txt  main.c
lesson-12/: README.md
lesson-12/stm32c031/: CMakeLists.txt
lesson-12/stm32c031/cmake/: gcc-arm-none-eabi.cmake
lesson-13/stm32c031/: main.c  startup_stm32c031c6.s
lesson-15/stm32c031-vscode/: CMakeLists.txt  README.md  main.c
lesson-16/stm32c031-vscode/: README.md  bsp.c  bsp.h  main.c
lesson-17/stm32c031-vscode/: CMakeLists.txt  bsp.c
lesson-18/stm32c031-vscode/: main.c
lesson-20/stm32c031-vscode/: .gitignore  bsp.h  main.c
lesson-21/stm32c031-vscode/: bsp.c  main.c
lesson-22/stm32c031-vscode/: CMakeLists.txt  bsp.c  main.c
lesson-23/stm32c031-vscode/: bsp.c  miros.c
lesson-24/stm32c031-vscode/: bsp.c  miros.c
lesson-25/stm32c031-vscode/: CMakeLists.txt  bsp.c  miros.c
lesson-39/tm4c123-uc_ao-keil/: TimeBomb.qm  TimeBomb.qms  timebomb.c
